# BharatVerse

./: .env  .env.docker  .env.example  .env.streamlit_cloud  .gitignore  .pre-commit-config.yaml  =0.10.0  =0.12.1  =0.16.0  =0.21.0  =0.4.6  =1.0.9  =10.0.0  =2.1.0  =20231117  =4.36.0  =4.8.0  ADMIN_SETUP.md  ARCHITECTURE_IMPROVEMENTS.md  ARCHITECTURE_REFACTOR.md  AUDIO_FIXES_SUMMARY.md  AUDIO_FUNCTIONALITY_SUMMARY.md  AUDIO_ISSUE_RESOLUTION_COMPLETE.md  AUTHENTICATION_GUIDE.md  CLOUD_AI_ISSUE_SOLUTION.md  CLOUD_AI_SERVICES_FIX.md  CLOUD_AI_SETUP_GUIDE.md  CLOUD_DEPLOYMENT_STATUS.md  COMMUNITY_IMPLEMENTATION_SUMMARY.md  COMMUNITY_QUICK_START.md  COMMUNITY_TROUBLESHOOTING.md  COMPLETE_DEPLOYMENT_READY_SECRETS.txt  CONTRIBUTING.md  CURRENT_STATUS_SUMMARY.md  DATABASE_COMPARISON.md  DATABASE_ISSUE_FIXED.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX_COMPLETE.md  DEPLOYMENT_GUIDE.md  (+105 more)
.gitlab/issue_templates/: Bug.md  Default.md  Documentation.md  Feature_Request.md
.gitlab/merge_request_templates/: Bug_Fix.md  Default.md  Documentation.md  Feature.md
.streamlit/: config.toml  secrets.toml.example
.streamlit/others/: SETUP_OVERVIEW.md  SPEED_SETUP_READY.md  STREAMLIT_CLOUD_DEPLOYMENT_GUIDE.md  STREAMLIT_CLOUD_SECRETS.toml  STREAMLIT_DEPLOYMENT_GUIDE.md  STREAMLIT_PRODUCTION_SECRETS.toml  SUPABASE_SETUP.md  USER_ACQUISITION_STRATEGY.md  setup_accounts.py  setup_supabase_config.py  start_app.py
CHANGELOG/: CHANGELOG.md
LICENSE/: LICENSE.md
api/: __init__.py  enhanced_main.py  main.py  requirements.txt
backend/: main.py
backend/core/: settings.py
backend/services/: corpus_api.py  vector_store.py
backup_old_architecture/pages/: 04_🔍_Discover.py  06_🤝_Community.py  07_🤖_AI_Insights.py  08_👥_Collaboration.py  08_🛡️_Admin_Dashboard.py  09_👤_My_Dashboard.py  11_📚_Browse_Contributions.py  13_🛠️_Community_Admin.py  15_📊_Real_Time_AI_Analytics.py
backup_old_architecture/streamlit_app/: analytics_module.py  app.py  audio_module.py  audio_processor.py  audio_recorder.py  community_admin.py  community_module.py  image_module.py  image_module_broken.py
backup_old_architecture/utils/: __init__.py  fallback_memory.py  inference_manager.py  minio_storage.py  redis_cache.py  supabase_db.py
config/: Dockerfile.api  Dockerfile.streamlit  FINAL_STREAMLIT_SECRETS.txt  app.json  packages.txt  performance_test_results.json  threading_config.py
core/: __init__.py  ai_models.py  ai_models_enhanced.py  ai_tracker.py  api_service.py  cloud_ai_manager.py  cloud_ai_models.py  community_service.py  config_manager.py  database.py  enhanced_ai_models.py  enhanced_ai_models_clean.py  error_handler.py  free_tier_ai.py  module_loader.py  page_template.py  service_manager.py
data/: contributions.json
docker/: init-db.sql
docs/: AUDIO_DEPLOYMENT_FIX.md  MULTITHREADING_GUIDE.md  user-acquisition-strategy.html
docs/guides/: AUDIO_CLOUD_DEPLOYMENT_GUIDE.md  AUDIO_SETUP_GUIDE.md  CACHE_FIX_COMPLETE.md  COMPLETE_DEPLOYMENT_READY_SECRETS.txt  COMPLETE_SETUP_GUIDE.md  FINAL_DEPLOYMENT_GUIDE.md  GITLAB_OAUTH_SETUP.md  INSTALLATION.md  OAUTH_REDIRECT_FIX.md  PERFORMANCE_IMPLEMENTATION_COMPLETE.md  PERFORMANCE_OPTIMIZATION.md  QUICK_START.md  ROLE_BASED_ACCESS_CONTROL.md
docs/setup/: ADMIN_TOOLS.md  ALL_ISSUES_FIXED.md  IMMEDIATE_CACHE_FIX.md  ISSUE_COMPLETELY_RESOLVED.md  LAUNCH_GUIDE.md
docs/technical/: COMMUNITY_FEATURES.md  COMMUNITY_STATUS_FINAL.md  DATABASE_COMPARISON.md  DEMO_MODE_REMOVAL_SUMMARY.md  ENHANCEMENT_SUMMARY.md  MULTIPAGE_README.md
migration_templates/: module_template.py  page_template.py
pages/: 01_🎤_Audio_Capture.py  01_🎤_Audio_Capture_Clean.py  01_📊_Dashboard.py  02_📝_Text_Stories.py  03_📸_Visual_Heritage.py  04_🔍_Discover.py  05_📊_Analytics.py  06_⚡_Performance.py  06_🤝_Community.py  07_🗄️_Database_Admin.py  07_🤖_AI_Insights.py  08_👥_Collaboration.py  08_🛡️_Admin_Dashboard.py  09_👤_My_Dashboard.py  09_🔗_GitLab.py  09_🦊_GitLab.py  10_👤_My_Profile.py  11_📚_Browse_Contributions.py  12_ℹ️_About.py  13_🛠️_Community_Admin.py  13_🛡️_Admin_Dashboard.py  14_🧠_Enhanced_AI_Features.py  99_🔧_OAuth_Debug.py
requirements/: ai.txt  base.txt  dev.txt  enhanced_ai.txt
scripts/: admin_tools.py  auto_cleanup.py  check_deployment_readiness.py  check_models.py  cleanup_redundant_files.py  compare_architectures.py  deploy_free.py  deploy_production.sh  deploy_streamlit_cloud.py  deploy_to_github.py  fix_database_config.py  fix_dependencies.py  fix_gitlab_oauth.py  fix_oauth_redirect.py  install_ai_dependencies.py  install_enhanced_ai.py  migrate_to_clean_architecture.py  performance_test.py  quick_setup_free_services.py  quick_status.py  run_app.py  run_app.sh  run_enhanced.py  run_system.sh  setup_env.sh  setup_for_speed.py  setup_free_cloud.py  setup_performance.py  setup_real_ai.py  setup_real_credentials.py  start_local.py  start_simple_local.py  start_system.py  stop_system.sh  test_cloud_setup.py  test_imports.py  test_module_syntax.py  test_uv_ruff_setup.py  verify_audio_fix.py
scripts/admin/: make_admin.py  minio_console_access.py  test_api_endpoints.py  test_audio.py  test_audio_deployment.py  test_cloud_ai.py  test_community_fix.py  test_integration.py  test_redis_connection.py  test_setup.py  test_supabase_connection.py
scripts/migration/: migrate_to_uv_ruff.py
streamlit_app/: admin_dashboard.py  ai_module.py  ai_module_old.py  analytics_module.py  app.py  app_legacy.py  app_redirect.py  audio_module.py  audio_recorder.py  collaboration_module.py  community_module.py  gitlab_module.py  image_module.py  search_module.py  text_module.py  text_module_broken.py  text_module_old.py  user_dashboard.py  user_profile.py
tests/: __init__.py  test_auth.py  test_cloud_ai.py  test_redis_connection.py  test_user_creation.py
utils/: __init__.py  app.json  async_client.py  config_validator.py  corpus_api.py  database_viewer.py  db.py  fallback_auth.py  fallback_storage.py  inference.py  memory_manager.py  minio_storage.py  performance_optimizer.py  r2.py  r2_storage.py  redis_cache.py  smart_storage.py  supabase_db.py  threading_manager.py  user_lookup.py
(+27 files in other folders)
