[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bharatverse"
version = "0.1.0"
description = "bharatverse"
authors = [
    { name="AJ", email="amruthjakku@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text="AGPL-3.0-or-later" }

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
